tests/baselines/reference/functionOverloads7(strict=true).errors.txt
functionOverloads7.ts(2,12): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads7.ts(3,12): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads7.ts (2 errors) ====
    class foo { 
       private bar();
               ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
       private bar(foo: string);
               ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
       private bar(foo?: any){ return "foo" }
       public n() {
         var foo = this.bar();
         foo = this.bar("test");
       }
    }
    